plugins {
    id 'org.springframework.boot' version '2.4.3'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'java'
}

group = 'reznikov.sergey.blog'
version = '1.0-SNAPSHOT'
sourceCompatibility = 17
targetCompatibility = 17

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'junit:junit:4.13.1'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'io.springfox:springfox-boot-starter:3.0.0'

    implementation 'com.mysql:mysql-connector-j:8.0.31'
    implementation 'org.modelmapper:modelmapper:3.1.0'


    implementation 'net.javacrumbs.shedlock:shedlock-spring:4.42.0'
    implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template:4.42.0'

    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'

}

jar {
    manifest {
        attributes(
                'Main-Class': 'reznikov/sergey/blog/Application.java'
        )
    }
}

test {
    useJUnitPlatform()
}